# resonantos-vnext

./: .gitignore  AGENTS.md  BROWSER-FIX-REPORT.md  BUILD-PLAN.md  CAMOFOX-CORRECTION-PLAN.md  CAMOFOX-EDGE-CASE-REPORT.md  CAMOFOX-INTEGRATION-REPORT.md  CLAUDE.md  QA-BROWSER-FINAL-REPORT.md  QA-BROWSER-REPORT.md  QA-PLATFORM-REPORT.md  README.md  RED-TEAM-REPORT.md  TASK-P1-vector-embeddings.md  TASK-P3-performance-monitoring.md  TASK-P4-entity-extraction.md  TASK.md  index.html  package-lock.json  package.json  vite.config.ts
browser-first/: COMET_PARITY_BACKLOG.md  PR-PLAN.md  README.md  TESTING.md  install.bat  install.ps1  install.sh  package-extension.sh  uninstall.ps1
docs/: README.md  (+8 more)
src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: TASK-PHASE2.md  TASK-PHASE3.md  TASK.md  archive_service.rs  audio2tol_service.rs  browser_native_service.rs  browser_service.rs  camofox_integration.rs  camofox_overlay_macos.rs  camofox_service.rs  compute_service.rs  delegation_service.rs  hermes_service.rs  host_state.rs  http_server.rs  lib.rs  lib.rs.bak  main.rs  marionette_bridge.rs  memory_service.rs  obsidian_service.rs  opencode_service.rs  paperclip_service.rs  provider_service.rs  recovery_service.rs  resonator_service.rs  telegram_service.rs  terminal_service.rs
src-tauri/src/archive_service/: archive_review.rs  archive_runtime.rs  archive_source_library.rs  archive_system_memory.rs  archive_tol_bundles.rs
src-tauri/tests/: camofox_integration_test.rs  marionette_test.rs
(+544 files in other folders)
